Added API Tests

--- a/src/test/resources/properties/testData.properties
+++ b/src/test/resources/properties/testData.properties
@@ -6,3 +6,7 @@ password=admin
 projectTitle=Test Project
 taskTitle=Test Task
 comment=Test Comment
+
+# Test Data For User Creation
+newUserName=user
+newUserPassword=123456
