Added additional UI Tests - Close Project - Create Sub-task - TODO: Finish the 'Copy task to another project' test

--- a/src/test/resources/properties/testData.properties
+++ b/src/test/resources/properties/testData.properties
@@ -4,7 +4,10 @@ password=admin
 
 # Test Data For Form Fills
 projectTitle=Test Project
+projectTitle1=Test Project #1
+projectTitle2=Test Project #2
 taskTitle=Test Task
+subTaskTitle=Test Sub-Task
 comment=Test Comment
 
 # Test Data For User Creation
