Added test case to copy task from one project to another

--- a/src/test/resources/properties/testData.properties
+++ b/src/test/resources/properties/testData.properties
@@ -11,5 +11,5 @@ subTaskTitle=Test Sub-Task
 comment=Test Comment
 
 # Test Data For User Creation
-newUserName=user
+newUserName=dhryniuk
 newUserPassword=123456
