Added test to check that task can be moved within a board Added additional test runner to re-run failed tests

--- a/src/test/resources/properties/testData.properties
+++ b/src/test/resources/properties/testData.properties
@@ -13,3 +13,9 @@ comment=Test Comment
 # Test Data For User Creation
 newUserName=dhryniuk
 newUserPassword=123456
+
+# Test Data for Project Board Columns (data-column-id)
+backlog=1
+ready=2
+workInProgress=3
+done=4
