--- a/pom.xml
+++ b/pom.xml
@@ -147,11 +147,19 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>test.xml</suiteXmlFile>
+                        <suiteXmlFile>testsXMLFiles/allTests.xml</suiteXmlFile>
+                        <suiteXmlFile>testsXMLFiles/projectTests.xml</suiteXmlFile>
+                        <suiteXmlFile>testsXMLFiles/taskTests.xml</suiteXmlFile>
+                        <suiteXmlFile>testsXMLFiles/userTests.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <properties>
+                        <property>
+                            <name>surefire.testng.groups</name>
+                            <value>Project,Task,User</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
